--- a/EstateEase/EstateEase.csproj
+++ b/EstateEase/EstateEase.csproj
@@ -38,10 +38,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\" />
-    <Folder Include="Database\" />
     <Folder Include="Views\" />
   </ItemGroup>
 
