Added a CreateDatabaseFile function to create a database if it doesn't exist, and added documentation to DatabaseInitializer / DatabaseConnector.

--- a/EstateEase/EstateEase.csproj
+++ b/EstateEase/EstateEase.csproj
@@ -48,6 +48,11 @@
     <Folder Include="Database\Source\" />
     <Folder Include="Views\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Database\Source\estateEase.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
   <!--
     Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution
